Media-Queries in CSS: Optimize snunei image to different resolutions, optimize images size; Hide gallery on small resolution; Fix error in university name

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -72,7 +72,7 @@
 
 	#header
 	{
-		padding: 6em 20px 6em 20px;
+		padding: 4em 20px 4em 20px;
 	}
 	
 		#header > header
