--- a/css/style-narrow.css
+++ b/css/style-narrow.css
@@ -52,7 +52,6 @@
 	#header
 	{
 		margin: 0 !important;
-		padding: 8em 2em 8em 2em;
 	}
 	
 		#header header
