--- a/css/style-normal.css
+++ b/css/style-normal.css
@@ -27,7 +27,7 @@
 
 	#header
 	{
-		padding: 10em 0 10em 0;
+		
 	}
 
 /*********************************************************************************/
